# giggle-debian

./: .topdeps  .topmsg  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  giggle_0.4.91.orig.tar.gz.delta  giggle_0.4.91.orig.tar.gz.id  giggle_0.4.95.orig.tar.gz.delta  giggle_0.4.95.orig.tar.gz.id  giggle_0.4.orig.tar.gz.delta  giggle_0.4.orig.tar.gz.id
data/: Makefile.am  Makefile.in  giggle.desktop.in  main-window.ui
debian/: changelog  control  copyright  giggle-personal-details-plugin.install  giggle-terminal-view-plugin.install  giggle.1  giggle.install  giggle.shlibs  menu  overrides  rules  series  watch
debian/patches/: debian-changes-0.5-2  norpath.patch  series
debian/source/: include-binaries
help/: Makefile.am  Makefile.in
help/C/: browse-view.page  history-view.page  index.page  introduction.page  license.page  opening-repositories.page  tagging-commits.page
help/cs/: browse-view.page  cs.po  history-view.page  index.page  introduction.page  license.page  opening-repositories.page  tagging-commits.page
help/de/: browse-view.page  de.po  history-view.page  index.page  introduction.page  license.page  opening-repositories.page  tagging-commits.page
help/es/: browse-view.page  es.po  history-view.page  index.page  introduction.page  license.page  opening-repositories.page  tagging-commits.page
help/fr/: browse-view.page  fr.po  history-view.page  index.page  introduction.page  license.page  opening-repositories.page  tagging-commits.page
help/pl/: browse-view.page  history-view.page  index.page  introduction.page  license.page  opening-repositories.page  pl.po  tagging-commits.page
help/sl/: browse-view.page  history-view.page  index.page  introduction.page  license.page  opening-repositories.page  sl.po  tagging-commits.page
libgiggle/: Makefile.am  Makefile.in  giggle-author.c  giggle-author.h  giggle-enums.c  giggle-enums.h  giggle-marshal.c  giggle-plugin.c  giggle-ref.c  giggle-ref.h  giggle-remote-branch.c  giggle-remote.c  giggle-searchable.c  giggle-searchable.h  giggle-view-shell.c  giggle-view.c  giggle-view.h
libgiggle-git/: Makefile.am  Makefile.in  giggle-git-authors.c  giggle-git-blame.c  giggle-git-clone.c  giggle-git-clone.h  giggle-git-commit.c  giggle-git-config-read.c  giggle-git-config.c  giggle-git-config.h  giggle-git-enums.c  giggle-git-enums.h  giggle-git-ignore.c  giggle-git-log.c  giggle-git-log.h  giggle-git-refs.c  giggle-git-revisions.c  giggle-git.c
pixmaps/: Makefile.in
plugins/: Makefile.am  Makefile.in  giggle-personal-details-window.c  giggle-view-terminal.c
po/: LINGUAS  POTFILES.in  ca.po  ca@valencia.po  cs.po  da.po  de.po  es.po  fr.po  gl.po  ja.po  nb.po  pa.po  pl.po  pt_BR.po  ro.po  sl.po  sv.po  uk.po  zh_CN.po
src/: Makefile.am  Makefile.in  eggfindbar.c  eggfindbar.h  giggle-avatar-cache.c  giggle-avatar-image.c  giggle-avatar-image.h  giggle-clone-dialog.c  giggle-clone-dialog.h  giggle-description-editor.c  giggle-description-editor.h  giggle-diff-view.c  giggle-diff-view.h  giggle-diff-window.c  giggle-enums.c  giggle-enums.h  giggle-file-list.c  giggle-graph-renderer.c  giggle-helpers.c  giggle-helpers.h  giggle-input-dialog.c  giggle-input-dialog.h  giggle-label-action.c  giggle-main.c  giggle-marshal.c  giggle-marshal.h  giggle-remote-editor.c  giggle-rev-list-view.c  giggle-revision-info.c  giggle-revision-info.h  giggle-revision-view.c  giggle-short-list.c  giggle-short-list.h  giggle-spaning-renderer.c  giggle-view-diff.c  giggle-view-diff.h  giggle-view-file.c  giggle-view-history.c  giggle-view-history.h  giggle-view-summary.c  (+1 more)
test/: Makefile.am  Makefile.in
