@YELP_HELP_RULES@

HELP_ID = giggle

HELP_LINGUAS = cs de es fr pl sl

HELP_FILES = \
	browse-view.page \
	history-view.page \
	index.page \
	introduction.page \
	license.page \
	opening-repositories.page \
	tagging-commits.page

HELP_MEDIA = \
	figures/giggle-browse_view_sections.png \
	figures/giggle-history_view_sections.png
